Dropdown item nowrap fix

--- a/app/assets/css/_sections/header/dropdown.sass
+++ b/app/assets/css/_sections/header/dropdown.sass
@@ -11,6 +11,7 @@
 		border-bottom: 1px solid $blue
 		text-transform: initial
 		font-weight: normal
+		white-space: nowrap
 
 		&:hover
 			background-color: $blue
