--- a/app/assets/css/_sections/header/nav.sass
+++ b/app/assets/css/_sections/header/nav.sass
@@ -36,7 +36,6 @@
 
 		&_dropdown:hover > .dropdown
 			left: 0
-			right: -50%
 
 		&_active
 			background-color: #fff
