--- a/app/assets/css/_sections/header/submenu.sass
+++ b/app/assets/css/_sections/header/submenu.sass
@@ -6,5 +6,8 @@
 	&__item
 		padding: 10px 20px
 		background-color: #FFF
-		border-bottom: 1px solid $blue
-		box-shadow: 1px 0 4px -1px #888 inset // hack!
+		box-shadow: 2px 0 4px -2px #888 inset // hack!
+
+		&:hover
+			background-color: $blue
+			color: #fff
